# SPDX-FileCopyrightText: 2022 Laurent Montel <montel@kde.org>
# SPDX-License-Identifier: BSD-3-Clause
macro(add_libkommit_test _source)
    set(_test ${_source} testcommon.cpp testcommon.h)
    get_filename_component( _name ${_source} NAME_WE )
    add_executable(${_name} ${_test} ${ARGN} ${_name}.h)
    add_test(NAME ${_name} COMMAND ${_name})
    ecm_mark_as_test(${_name})
    target_link_libraries(${_name} Qt::Test libkommit)
endmacro()

add_libkommit_test(tagtest.cpp)
add_libkommit_test(clonetest.cpp)
add_libkommit_test(indextest.cpp)
add_libkommit_test(clonecommandtest.cpp)
add_libkommit_test(commandcleantest.cpp)
add_libkommit_test(commandpushtest.cpp)
add_libkommit_test(addsubmodulecommandtest.cpp)
add_libkommit_test(branchestest.cpp)
add_libkommit_test(configtest.cpp)
add_libkommit_test(remotetest.cpp)
add_libkommit_test(stashtest.cpp)
add_libkommit_test(submoduletest.cpp)
add_libkommit_test(filetest.cpp)
add_libkommit_test(branchesdifftest.cpp)
